[package]
name = "escrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
no-entrypoint = []

[dependencies]
arrayref = "0.3.6"
solana-program = "1.7.11"
thiserror = "1.0"
spl-token = "3.1.1"

[lib]
crate-type = ["cdylib", "lib"]